--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -1,99 +1,214 @@
 <?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:background="@drawable/drawable_shape">
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<!-- Search Bar -->
+<EditText
+    android:id="@+id/et_search"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
+    android:background="@drawable/iv_home_page_rectangle2"
+    android:hint="Search for Recipes"
+    android:padding="12dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
+
+<!-- Button for Filter Pop-up -->
+<Button
+    android:id="@+id/btn_show_filters"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Filter"
+    app:layout_constraintTop_toBottomOf="@id/et_search"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintHorizontal_bias="0.5" />
+
+<!-- Scrollable Filter Section (Initially Hidden) -->
+<ScrollView
+    android:id="@+id/filterScrollView"
     android:layout_width="match_parent"
-    android:layout_height="844dp"
-    android:background="@drawable/drawable_shape">
+    android:layout_height="0dp"
+    android:layout_marginTop="16dp"
+    android:visibility="gone"
+    app:layout_constraintTop_toBottomOf="@id/btn_show_filters"
+    app:layout_constraintBottom_toTopOf="@id/scrollView"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHeight_percent="0.3"> <!-- Limit to 30% of screen height -->
 
-    <ImageView
-        android:id="@+id/iv_home_page_image"
-        android:layout_width="390dp"
-        android:layout_height="158dp"
-        android:layout_marginBottom="686dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/iv_home_page_image"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/iv_home_page_rectangle2"
-        android:layout_width="390dp"
-        android:layout_height="53dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="118dp"
-        android:layout_marginBottom="673dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/iv_home_page_rectangle2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/iv_home_page_rectangle4"
-        android:layout_width="360dp"
-        android:layout_height="62dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="29dp"
-        android:layout_marginBottom="753dp"
-        android:background="@drawable/iv_home_page_rectangle4"
-        android:scaleType="centerInside"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <ImageView
-        android:id="@+id/SearchIcon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="328dp"
-        android:layout_marginTop="41dp"
-        android:layout_marginBottom="763dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/image_state_layer2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/OptionsIcon1"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="41dp"
-        android:layout_marginBottom="763dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/image_state_layer"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/txtSearch"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/filterSection"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="140dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="775dp"
-        android:text="Search for Recipes"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="vertical"
+        android:padding="16dp">
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigationView"
-        android:layout_width="0dp"
+        <TextView
+            android:id="@+id/filterLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Apply a filter"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_marginBottom="10dp" />
+
+        <!-- Calories Filter -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Calories"
+            android:textStyle="bold"
+            android:layout_marginBottom="4dp" />
+
+        <RadioGroup
+            android:id="@+id/radioGroupCalories"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <RadioButton
+                android:id="@+id/radioCalories500"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="500&lt;" />
+
+            <RadioButton
+                android:id="@+id/radioCalories1000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1000&lt;" />
+
+            <RadioButton
+                android:id="@+id/radioCalories1500"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1500&lt;" />
+
+            <RadioButton
+                android:id="@+id/radioCalories2000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2000&lt;" />
+        </RadioGroup>
+
+        <!-- Type of Meal Filter -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Type of meal"
+            android:textStyle="bold"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="4dp" />
+
+        <RadioGroup
+            android:id="@+id/radioGroupMealType"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <RadioButton
+                android:id="@+id/radioBreakfast"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Breakfast" />
+
+            <RadioButton
+                android:id="@+id/radioLunch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Lunch" />
+
+            <RadioButton
+                android:id="@+id/radioDinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Dinner" />
+        </RadioGroup>
+
+        <!-- Main Ingredient Filter -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Main ingredient"
+            android:textStyle="bold"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="4dp" />
+
+        <RadioGroup
+            android:id="@+id/radioGroupIngredients"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <RadioButton
+                android:id="@+id/radioChicken"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Chicken" />
+
+            <RadioButton
+                android:id="@+id/radioBeef"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Beef" />
+
+            <RadioButton
+                android:id="@+id/radioFish"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Fish" />
+
+            <RadioButton
+                android:id="@+id/radioFlour"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Flour" />
+
+            <RadioButton
+                android:id="@+id/radioEggs"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Eggs" />
+        </RadioGroup>
+
+    </LinearLayout>
+</ScrollView>
+
+<!-- Search Results Section (ScrollView) -->
+<ScrollView
+    android:id="@+id/scrollView"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:layout_marginTop="16dp"
+    app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/filterScrollView"
+    tools:ignore="SpeakableTextPresentCheck">
+
+    <LinearLayout
+        android:id="@+id/ll_search_results"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
-        app:labelVisibilityMode="unlabeled"
-        app:layout_constraintBaseline_toBottomOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_nav" />
+        android:orientation="vertical" />
+</ScrollView>
+
+<!-- Bottom Navigation -->
+<com.google.android.material.bottomnavigation.BottomNavigationView
+    android:id="@+id/bottomNavigationView"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="4dp"
+    app:labelVisibilityMode="unlabeled"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:menu="@menu/bottom_nav" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
