--- a/app/src/main/res/layout/activity_shopping_list_page.xml
+++ b/app/src/main/res/layout/activity_shopping_list_page.xml
@@ -1,172 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container_shopping_list"
+    android:id="@+id/constraintLayout_shopping_list"
     android:layout_width="match_parent"
-    android:layout_height="844dp"
-    android:background="@drawable/container_shopping_list">
+    android:layout_height="match_parent"
+    android:background="@drawable/img_shopping_list1"
+    tools:context=".ShoppingListPage">
 
-    <ImageView
-        android:id="@+id/img_shopping_list1"
-        android:layout_width="564dp"
-        android:layout_height="1002dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/img_shopping_list1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="349dp"
-        android:layout_height="62dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="187dp"
-        android:layout_marginBottom="910dp"
-        android:background="#4D000000"
-        app:layout_constraintBottom_toBottomOf="@+id/img_shopping_list1"
-        app:layout_constraintEnd_toEndOf="@+id/img_shopping_list1"
-        app:layout_constraintStart_toStartOf="@+id/img_shopping_list1"
-        app:layout_constraintTop_toTopOf="@+id/img_shopping_list1"
-        app:srcCompat="@drawable/container_button" />
-
-    <ImageView
-        android:id="@+id/OptionsIcon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="276dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="33dp"
-        android:layout_marginBottom="12dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/leading_icon_image"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
-        app:layout_constraintEnd_toEndOf="@+id/imageView3"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/imageView3"
-        app:layout_constraintTop_toTopOf="@+id/imageView3"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <TextView
-        android:id="@+id/txt_shopping_list_title"
-        android:layout_width="160dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="117dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="129dp"
-        android:layout_marginBottom="7dp"
-        android:gravity="left|center_vertical"
-        android:includeFontPadding="false"
-        android:lineHeight="24dp"
-        android:maxLines="2"
-        android:text="Shopping list"
-        android:textColor="#FF000000"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
-        app:layout_constraintEnd_toEndOf="@+id/imageView3"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="@+id/imageView3"
-        app:layout_constraintTop_toTopOf="@+id/imageView3"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <ImageView
-        android:id="@+id/AddToList"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="47dp"
-        android:layout_marginTop="153dp"
-        android:layout_marginEnd="492dp"
-        android:layout_marginBottom="824dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/ic_plus_square"
-        app:layout_constraintBottom_toBottomOf="@+id/img_shopping_list1"
-        app:layout_constraintEnd_toEndOf="@+id/img_shopping_list1"
-        app:layout_constraintStart_toStartOf="@+id/img_shopping_list1"
-        app:layout_constraintTop_toTopOf="@+id/img_shopping_list1" />
-
-    <TextView
-        android:id="@+id/txt_add_to_shopping_list"
-        android:layout_width="156dp"
-        android:layout_height="21dp"
-        android:layout_marginStart="85dp"
-        android:layout_marginTop="153dp"
-        android:layout_marginEnd="323dp"
-        android:layout_marginBottom="828dp"
-        android:gravity="left|center_vertical"
-        android:includeFontPadding="false"
-        android:maxLines="1"
-        android:singleLine="true"
-        android:text="Add to shopping list"
-        android:textColor="#FF000000"
-        android:textSize="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/img_shopping_list1"
-        app:layout_constraintEnd_toEndOf="@+id/img_shopping_list1"
-        app:layout_constraintStart_toStartOf="@+id/img_shopping_list1"
-        app:layout_constraintTop_toTopOf="@+id/img_shopping_list1" />
-
-    <ImageView
-        android:id="@+id/container_shopping_cart_shopping_cart_checkout"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="160dp"
-        android:layout_marginTop="246dp"
-        android:layout_marginEnd="334dp"
-        android:layout_marginBottom="686dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/container_shopping_cart_shopping_cart_checkout"
-        app:layout_constraintBottom_toBottomOf="@+id/img_shopping_list1"
-        app:layout_constraintEnd_toEndOf="@+id/img_shopping_list1"
-        app:layout_constraintStart_toStartOf="@+id/img_shopping_list1"
-        app:layout_constraintTop_toTopOf="@+id/img_shopping_list1" />
-
-    <TextView
-        android:id="@+id/txt_empty_shopping_list"
-        android:layout_width="344dp"
-        android:layout_height="93dp"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="338dp"
-        android:layout_marginEnd="197dp"
-        android:layout_marginBottom="571dp"
-        android:gravity="center_horizontal|top"
-        android:includeFontPadding="false"
-        android:lineHeight="46dp"
-        android:text="Your shopping list is empty"
-        android:textColor="#FF000000"
-        android:textSize="34sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/img_shopping_list1"
-        app:layout_constraintEnd_toEndOf="@+id/img_shopping_list1"
-        app:layout_constraintStart_toStartOf="@+id/img_shopping_list1"
-        app:layout_constraintTop_toTopOf="@+id/img_shopping_list1" />
-
-    <TextView
-        android:id="@+id/txtShoppingListDescription"
-        android:layout_width="314dp"
-        android:layout_height="118dp"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="453dp"
-        android:layout_marginEnd="212dp"
-        android:layout_marginBottom="431dp"
-        android:gravity="center"
-        android:text="Start the shopping list by adding ingredients using the add button"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/img_shopping_list1"
-        app:layout_constraintEnd_toEndOf="@+id/img_shopping_list1"
-        app:layout_constraintStart_toStartOf="@+id/img_shopping_list1"
-        app:layout_constraintTop_toTopOf="@+id/img_shopping_list1" />
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigationView"
-        android:layout_width="0dp"
+    <!-- Header Bar with Title -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/header"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="85dp"
-        app:labelVisibilityMode="unlabeled"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:padding="16dp">
+
+        <!-- Title -->
+        <TextView
+            android:id="@+id/txt_shopping_list_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="108dp"
+            android:text="Shopping list"
+            android:textColor="@android:color/black"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- Add to Shopping List Button -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/add_to_list_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/header"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp">
+
+        <!-- Add Icon -->
+        <ImageView
+            android:id="@+id/add_to_list_icon"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:contentDescription="Add to List"
+            android:src="@drawable/ic_plus_square"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <!-- Add to Shopping List Text -->
+        <TextView
+            android:id="@+id/txt_add_to_shopping_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:text="Add to shopping list"
+            android:textSize="16sp"
+            android:textColor="@android:color/black"
+            app:layout_constraintStart_toEndOf="@+id/add_to_list_icon"
+            app:layout_constraintTop_toTopOf="@+id/add_to_list_icon" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- Scrollable Shopping List Categories -->
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/scrollView_shopping_list"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/add_to_list_container"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <LinearLayout
+            android:id="@+id/linearLayout_shopping_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp" />
+    </androidx.core.widget.NestedScrollView>
+
+    <!-- Bottom Navigation View -->
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        app:labelVisibilityMode="unlabeled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_nav" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
